--- a/app/src/main/res/layout/activity_booking_list.xml
+++ b/app/src/main/res/layout/activity_booking_list.xml
@@ -4,27 +4,57 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BookingList">
+    android:layout_margin="10dp"
+    android:padding="10dp"
+    android:id="@+id/goToDetail">
 
     <TextView
-        android:id="@+id/tv_booking_list"
+        android:id="@+id/tv_guest_names"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Booking List"
+        android:text="Su Su Aye"
         android:textSize="17sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btn_view_detail"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_time_and_guest"
+        android:layout_width="112dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        android:text="1 night - 2 guests"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.119"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_booking_ref"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:text="106j-3da7"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_booking_ref_label"
+        app:layout_constraintStart_toEndOf="@+id/tv_booking_ref_label"
+        app:layout_constraintTop_toTopOf="@+id/tv_booking_ref_label"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/tv_booking_ref_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Booking Reference : "
+        app:layout_constraintStart_toStartOf="@+id/tv_guest_names"
+        app:layout_constraintTop_toBottomOf="@+id/tv_guest_names" />
 
     <Button
         android:id="@+id/btn_view_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="16dp"
         android:text="View Detail"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.706"
-        app:layout_constraintStart_toEndOf="@+id/tv_booking_list"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_booking_ref_label" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
