--- a/app/src/main/res/layout/activity_booking_list.xml
+++ b/app/src/main/res/layout/activity_booking_list.xml
@@ -1,60 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    android:padding="10dp"
+    android:orientation="vertical"
     android:id="@+id/goToDetail">
 
-    <TextView
-        android:id="@+id/tv_guest_names"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Su Su Aye"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_time_and_guest"
-        android:layout_width="112dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:text="1 night - 2 guests"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_booking_ref"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:text="106j-3da7"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_booking_ref_label"
-        app:layout_constraintStart_toEndOf="@+id/tv_booking_ref_label"
-        app:layout_constraintTop_toTopOf="@+id/tv_booking_ref_label"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/tv_booking_ref_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Booking Reference : "
-        app:layout_constraintStart_toStartOf="@+id/tv_guest_names"
-        app:layout_constraintTop_toBottomOf="@+id/tv_guest_names" />
-
-    <Button
-        android:id="@+id/btn_view_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="View Detail"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_booking_ref_label" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="5dp"/>
+</LinearLayout>
