consume api with retrofit

--- a/app/src/main/res/layout/activity_booking_origin.xml
+++ b/app/src/main/res/layout/activity_booking_origin.xml
@@ -67,25 +67,27 @@
 
         <View
             android:id="@+id/view3"
-            android:layout_width="141dp"
+            android:layout_width="0dp"
             android:layout_height="2dp"
             android:background="@color/gold"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_checkout"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_checkin"
             app:layout_constraintEnd_toStartOf="@+id/tv_checkout"
             app:layout_constraintStart_toEndOf="@+id/tv_checkin"
-            app:layout_constraintTop_toTopOf="@+id/textView7"
+            app:layout_constraintTop_toTopOf="@+id/textView5"
             app:layout_constraintVertical_bias="0.421" />
 
         <TextView
             android:id="@+id/tv_num_rooms"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:text="2 rooms"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_checkin"
+            app:layout_constraintBottom_toTopOf="@+id/tv_num_nights"
             app:layout_constraintEnd_toEndOf="@+id/tv_num_nights"
+            app:layout_constraintHorizontal_bias="0.656"
             app:layout_constraintStart_toStartOf="@+id/tv_num_nights"
-            app:layout_constraintTop_toBottomOf="@+id/view3" />
+            app:layout_constraintTop_toTopOf="@+id/textView5" />
 
         <TextView
             android:id="@+id/textView3"
@@ -102,14 +104,12 @@
             android:id="@+id/tv_num_nights"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:text="2 nights"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/tv_num_rooms"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_checkin"
             app:layout_constraintEnd_toStartOf="@+id/tv_checkout"
             app:layout_constraintStart_toEndOf="@+id/tv_checkin"
-            app:layout_constraintTop_toTopOf="@+id/textView5"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toBottomOf="@+id/view3" />
 
         <TextView
             android:id="@+id/textView7"
