--- a/app/src/main/res/layout/fragment_payment_summary.xml
+++ b/app/src/main/res/layout/fragment_payment_summary.xml
@@ -14,7 +14,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView28"
+        android:id="@+id/tv_payment_summary_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -24,142 +24,142 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView29"
+        android:id="@+id/tv_total_amount_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Total Amount"
-        app:layout_constraintStart_toStartOf="@+id/textView14"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+        app:layout_constraintStart_toStartOf="@+id/tv_payment_type_label"
+        app:layout_constraintTop_toBottomOf="@+id/tv_payment_type_label" />
 
     <TextView
-        android:id="@+id/textView32"
+        android:id="@+id/tv_discount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="0.0"
-        app:layout_constraintEnd_toEndOf="@+id/textView30"
-        app:layout_constraintTop_toBottomOf="@+id/textView30" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_total_amount"
+        app:layout_constraintTop_toBottomOf="@+id/tv_total_amount" />
 
     <TextView
-        android:id="@+id/textView30"
+        android:id="@+id/tv_total_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="10500.0"
-        app:layout_constraintEnd_toEndOf="@+id/textView15"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_payment_type"
+        app:layout_constraintTop_toBottomOf="@+id/tv_payment_type" />
 
     <TextView
-        android:id="@+id/textView31"
+        android:id="@+id/tv_discount_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Discount"
-        app:layout_constraintStart_toStartOf="@+id/textView29"
-        app:layout_constraintTop_toBottomOf="@+id/textView29" />
+        app:layout_constraintStart_toStartOf="@+id/tv_total_amount_label"
+        app:layout_constraintTop_toBottomOf="@+id/tv_total_amount_label" />
 
     <TextView
-        android:id="@+id/textView35"
+        android:id="@+id/tv_convenience_fee_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Convenience Fee"
-        app:layout_constraintStart_toStartOf="@+id/textView33"
-        app:layout_constraintTop_toBottomOf="@+id/textView33" />
+        app:layout_constraintStart_toStartOf="@+id/tv_taxes_label"
+        app:layout_constraintTop_toBottomOf="@+id/tv_taxes_label" />
 
     <TextView
-        android:id="@+id/textView36"
+        android:id="@+id/tv_convenience_fee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="200"
-        app:layout_constraintEnd_toEndOf="@+id/textView34"
-        app:layout_constraintTop_toBottomOf="@+id/textView34" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_taxes"
+        app:layout_constraintTop_toBottomOf="@+id/tv_taxes" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/tv_payment_amount_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Payment Amount"
-        app:layout_constraintStart_toStartOf="@+id/textView35"
+        app:layout_constraintStart_toStartOf="@+id/tv_convenience_fee_label"
         app:layout_constraintTop_toBottomOf="@+id/view6" />
 
     <TextView
-        android:id="@+id/textView57"
+        android:id="@+id/tv_payment_currency_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Payment Currency"
-        app:layout_constraintStart_toStartOf="@+id/textView11"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        app:layout_constraintStart_toStartOf="@+id/tv_payment_amount_label"
+        app:layout_constraintTop_toBottomOf="@+id/tv_payment_amount_label" />
 
     <TextView
-        android:id="@+id/textView59"
+        android:id="@+id/tv_gateway_type_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Gateway Type"
-        app:layout_constraintStart_toStartOf="@+id/textView57"
-        app:layout_constraintTop_toBottomOf="@+id/textView57" />
+        app:layout_constraintStart_toStartOf="@+id/tv_payment_currency_label"
+        app:layout_constraintTop_toBottomOf="@+id/tv_payment_currency_label" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/tv_payment_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="105200.0"
-        app:layout_constraintEnd_toEndOf="@+id/textView36"
+        app:layout_constraintEnd_toEndOf="@+id/tv_convenience_fee"
         app:layout_constraintTop_toBottomOf="@+id/view6" />
 
     <TextView
-        android:id="@+id/textView61"
+        android:id="@+id/tv_transaction_id_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Transaction Id"
-        app:layout_constraintStart_toStartOf="@+id/textView59"
-        app:layout_constraintTop_toBottomOf="@+id/textView59" />
+        app:layout_constraintStart_toStartOf="@+id/tv_gateway_type_label"
+        app:layout_constraintTop_toBottomOf="@+id/tv_gateway_type_label" />
 
     <TextView
-        android:id="@+id/textView62"
+        android:id="@+id/tv_transaction_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="1232212"
-        app:layout_constraintEnd_toEndOf="@+id/textView60"
-        app:layout_constraintTop_toBottomOf="@+id/textView60" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_gateway_type"
+        app:layout_constraintTop_toBottomOf="@+id/tv_gateway_type" />
 
     <TextView
-        android:id="@+id/textView58"
+        android:id="@+id/tv_payment_currency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="MMK"
-        app:layout_constraintEnd_toEndOf="@+id/textView13"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_payment_amount"
+        app:layout_constraintTop_toBottomOf="@+id/tv_payment_amount" />
 
     <TextView
-        android:id="@+id/textView60"
+        android:id="@+id/tv_gateway_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Fake Pay"
-        app:layout_constraintEnd_toEndOf="@+id/textView58"
-        app:layout_constraintTop_toBottomOf="@+id/textView58" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_payment_currency"
+        app:layout_constraintTop_toBottomOf="@+id/tv_payment_currency" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/tv_payment_type_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="Payment Type"
-        app:layout_constraintStart_toStartOf="@+id/textView28"
-        app:layout_constraintTop_toTopOf="@+id/textView15" />
+        app:layout_constraintStart_toStartOf="@+id/tv_payment_summary_title"
+        app:layout_constraintTop_toTopOf="@+id/tv_payment_type" />
 
     <TextView
-        android:id="@+id/textView15"
+        android:id="@+id/tv_payment_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
@@ -167,26 +167,26 @@
         android:text="Fully Paid"
         android:textAllCaps="true"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView14"
-        app:layout_constraintTop_toBottomOf="@+id/textView28" />
+        app:layout_constraintStart_toEndOf="@+id/tv_payment_type_label"
+        app:layout_constraintTop_toBottomOf="@+id/tv_payment_summary_title" />
 
     <TextView
-        android:id="@+id/textView33"
+        android:id="@+id/tv_taxes_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Taxes"
-        app:layout_constraintStart_toStartOf="@+id/textView31"
-        app:layout_constraintTop_toBottomOf="@+id/textView31" />
+        app:layout_constraintStart_toStartOf="@+id/tv_discount_label"
+        app:layout_constraintTop_toBottomOf="@+id/tv_discount_label" />
 
     <TextView
-        android:id="@+id/textView34"
+        android:id="@+id/tv_taxes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="0.0"
-        app:layout_constraintEnd_toEndOf="@+id/textView32"
-        app:layout_constraintTop_toBottomOf="@+id/textView32" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_discount"
+        app:layout_constraintTop_toBottomOf="@+id/tv_discount" />
 
     <View
         android:id="@+id/view6"
@@ -198,10 +198,10 @@
         android:background="@color/tableStripe"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView36" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_convenience_fee" />
 
     <TextView
-        android:id="@+id/textView63"
+        android:id="@+id/tv_commission_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -209,44 +209,44 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView61" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_transaction_id_label" />
 
     <TextView
-        android:id="@+id/textView66"
+        android:id="@+id/tv_commission_able_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="105000.0 "
-        app:layout_constraintEnd_toEndOf="@+id/textView62"
-        app:layout_constraintTop_toBottomOf="@+id/textView63" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_transaction_id"
+        app:layout_constraintTop_toBottomOf="@+id/tv_commission_title" />
 
     <TextView
-        android:id="@+id/textView65"
+        android:id="@+id/tv_commission_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Commission  "
-        app:layout_constraintStart_toStartOf="@+id/textView64"
-        app:layout_constraintTop_toBottomOf="@+id/textView64" />
+        app:layout_constraintStart_toStartOf="@+id/tv_commission_able_label"
+        app:layout_constraintTop_toBottomOf="@+id/tv_commission_able_label" />
 
     <TextView
-        android:id="@+id/textView67"
+        android:id="@+id/tv_commission"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="15750.0 "
-        app:layout_constraintEnd_toEndOf="@+id/textView66"
-        app:layout_constraintTop_toBottomOf="@+id/textView66" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_commission_able_amount"
+        app:layout_constraintTop_toBottomOf="@+id/tv_commission_able_amount" />
 
     <TextView
-        android:id="@+id/textView64"
+        android:id="@+id/tv_commission_able_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Commission-able amount "
-        app:layout_constraintStart_toStartOf="@+id/textView63"
-        app:layout_constraintTop_toBottomOf="@+id/textView63" />
+        app:layout_constraintStart_toStartOf="@+id/tv_commission_title"
+        app:layout_constraintTop_toBottomOf="@+id/tv_commission_title" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
