--- a/app/src/main/res/layout/item_booking_info.xml
+++ b/app/src/main/res/layout/item_booking_info.xml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    app:cardElevation="6dp">
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/materail_card"
+        android:foreground="?android:attr/selectableItemBackground"
+        style="?attr/shapeAppearanceMediumComponent">
+
+
 
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/bookingRowLayout"
     android:layout_width="match_parent"
-     android:layout_height="wrap_content">
+     android:layout_height="wrap_content"
+    android:padding="16dp">
 
     <TextView
-        android:id="@+id/tv_row_guest_name"
+        android:id="@+id/tv_test_guest_name_num_guest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -33,8 +41,8 @@
         android:layout_marginTop="16dp"
         android:text="Check In"
         android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/tv_row_guest_name"
-        app:layout_constraintTop_toBottomOf="@+id/tv_row_guest_name" />
+        app:layout_constraintStart_toStartOf="@+id/tv_test_guest_name_num_guest"
+        app:layout_constraintTop_toBottomOf="@+id/tv_test_guest_name_num_guest" />
 
     <TextView
         android:id="@+id/tv_row_checkin"
@@ -42,9 +50,10 @@
         android:layout_height="wrap_content"
         android:text="Dec 19, 2021"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textStyle="bold"
+
         app:layout_constraintStart_toStartOf="@+id/tv_row_checkin_label"
-        app:layout_constraintTop_toBottomOf="@+id/tv_row_checkin_label" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_row_checkin_label"
+        android:textColor="?attr/colorOnSurface"/>
 
     <TextView
         android:id="@+id/tv_row_booking_ref_label"
@@ -62,9 +71,9 @@
         android:layout_height="wrap_content"
         android:text="109-20j"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/tv_row_booking_ref_label"
-        app:layout_constraintTop_toBottomOf="@+id/tv_row_booking_ref_label" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_row_booking_ref_label"
+        android:textColor="?attr/colorOnSurface"/>
 
     <View
         android:id="@+id/view"
@@ -81,7 +90,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1 night - 2 guests - 2 rooms"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_row_guest_name"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_test_guest_name_num_guest"
         app:layout_constraintEnd_toEndOf="@+id/tv_row_booking_ref_label" />
 
     <TextView
@@ -102,10 +111,11 @@
         android:layout_height="wrap_content"
         android:text="Dec 20, 2021"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/tv_row_checkout_label"
-        app:layout_constraintTop_toBottomOf="@+id/tv_row_checkout_label" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_row_checkout_label"
+        android:textColor="?attr/colorOnSurface"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
+    </LinearLayout>
