--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gold">#c49216</color>
+    <color name="gold">#eef0f2</color>
+    <color name="focusGreen">#55b96c</color>
     <color name="tableStripe">#f2f2f3</color>
 </resources>
