--- a/app/src/main/res/layout/item_booking_info.xml
+++ b/app/src/main/res/layout/item_booking_info.xml
@@ -1,121 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/materail_card"
+        android:id="@+id/bookingRowLayout2"
+        android:layout_margin="2dp"
         android:foreground="?android:attr/selectableItemBackground"
         style="?attr/shapeAppearanceMediumComponent">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/tv_row_guest_name_num_guest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Su Su Aye | 2 guests"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_row_booking_ref_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Booking Reference:"
+                app:layout_constraintStart_toStartOf="@+id/tv_row_guest_name_num_guest"
+                app:layout_constraintTop_toBottomOf="@+id/tv_row_guest_name_num_guest" />
+
+            <TextView
+                android:id="@+id/tv_row_booking_ref"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="2022-3456"
+                android:textColor="@color/design_default_color_secondary"
+                app:layout_constraintStart_toEndOf="@+id/tv_row_booking_ref_label"
+                app:layout_constraintTop_toTopOf="@+id/tv_row_booking_ref_label" />
+
+            <TextView
+                android:id="@+id/tv_row_checkin_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Check In"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="@+id/tv_row_booking_ref_label"
+                app:layout_constraintTop_toBottomOf="@+id/tv_row_booking_ref_label" />
+
+            <TextView
+                android:id="@+id/tv_checkIn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dec 19, 2021"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                app:layout_constraintStart_toStartOf="@+id/tv_row_guest_name_num_guest"
+                app:layout_constraintTop_toBottomOf="@+id/tv_row_checkin_label" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Check Out"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="@+id/tv_row_checkout"
+                app:layout_constraintTop_toTopOf="@+id/tv_row_checkin_label" />
+
+            <TextView
+                android:id="@+id/tv_row_checkout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="32dp"
+                android:text="Dec 19, 2021"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+            <TextView
+                android:id="@+id/tv_nights_and_rooms"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2 nights - 2 rooms"
+                app:layout_constraintStart_toStartOf="@+id/tv_row_checkout"
+                app:layout_constraintTop_toTopOf="@+id/tv_row_booking_ref_label" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/bookingRowLayout"
-    android:layout_width="match_parent"
-     android:layout_height="wrap_content"
-    android:padding="16dp">
-
-    <TextView
-        android:id="@+id/tv_test_guest_name_num_guest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:text="Su Su Aye"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_row_checkin_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Check In"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/tv_test_guest_name_num_guest"
-        app:layout_constraintTop_toBottomOf="@+id/tv_test_guest_name_num_guest" />
-
-    <TextView
-        android:id="@+id/tv_row_checkin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Dec 19, 2021"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-
-        app:layout_constraintStart_toStartOf="@+id/tv_row_checkin_label"
-        app:layout_constraintTop_toBottomOf="@+id/tv_row_checkin_label"
-        android:textColor="?attr/colorOnSurface"/>
-
-    <TextView
-        android:id="@+id/tv_row_booking_ref_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:text="Booking Ref"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_row_checkin_label" />
-
-    <TextView
-        android:id="@+id/tv_row_booking_ref"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="109-20j"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintStart_toStartOf="@+id/tv_row_booking_ref_label"
-        app:layout_constraintTop_toBottomOf="@+id/tv_row_booking_ref_label"
-        android:textColor="?attr/colorOnSurface"/>
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="8dp"
-        android:background="#dadada"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_row_checkin" />
-
-    <TextView
-        android:id="@+id/tv_detail_num_night"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1 night - 2 guests - 2 rooms"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_test_guest_name_num_guest"
-        app:layout_constraintEnd_toEndOf="@+id/tv_row_booking_ref_label" />
-
-    <TextView
-        android:id="@+id/tv_row_checkout_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:text="Check Out"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toStartOf="@+id/tv_row_booking_ref_label"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/tv_row_checkin_label"
-        app:layout_constraintTop_toTopOf="@+id/tv_row_checkin_label" />
-
-    <TextView
-        android:id="@+id/tv_row_checkout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Dec 20, 2021"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintStart_toStartOf="@+id/tv_row_checkout_label"
-        app:layout_constraintTop_toBottomOf="@+id/tv_row_checkout_label"
-        android:textColor="?attr/colorOnSurface"/>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
-    </LinearLayout>
+
+
+</LinearLayout>
