--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,7 +15,7 @@
         android:id="@+id/nav_gallery"
         android:name="com.innoveller.roomseller.ui.booking.BookingFragment"
         android:label="@string/menu_booking"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_booking_list" />
 
     <fragment
         android:id="@+id/nav_slideshow"
