--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,20 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_booking_list"
         android:name="com.innoveller.roomseller.ui.booking.BookingFragment"
         android:label="@string/menu_booking"
         tools:layout="@layout/fragment_booking_list" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.innoveller.roomseller.ui.slideshow.SlideshowFragment"
+        android:id="@+id/nav_profile"
+        android:name="com.innoveller.roomseller.ui.profile.ProfileFragment"
         android:label="@string/menu_profile"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_profile" />
+
+    <fragment
+        android:id="@+id/nav_logout"
+        android:name="com.innoveller.roomseller.ui.profile.ProfileFragment"
+        android:label="@string/menu_profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
