--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="focusGreen">#55b96c</color>
     <color name="tableStripe">#f2f2f3</color>
 
+    <color name="stroke_color">#eaecef</color>
+
     <color name="primary">#FF6200EE</color>
 
 </resources>
